[gd_scene load_steps=3 format=3 uid="uid://djtcxtqjaftg5"]

[ext_resource type="Script" path="res://Scenes and Scripts/Dialog/dialog_tutorial_2.gd" id="1_u4gx8"]
[ext_resource type="Texture2D" uid="uid://dm275h5fsqja2" path="res://Assets/UI/Text Button Backrounds/menu_button_mid.png" id="2_4cnn0"]

[node name="DialogTutorial" type="CanvasLayer"]

[node name="DialogBox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u4gx8")

[node name="SkipButton" type="Button" parent="DialogBox"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 712.0
offset_top = 912.0
offset_right = -288.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
icon = ExtResource("2_4cnn0")

[node name="SkipButtonTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Voice Over" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="DialogBox/SkipButton" to="DialogBox" method="_on_skip_button_pressed"]
[connection signal="timeout" from="SkipButtonTimer" to="DialogBox" method="_on_skip_button_timer_timeout"]
